Update-#002 - Opened Window

--- a/PasswortManager3.0.vcxproj
+++ b/PasswortManager3.0.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="file.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="util.c" />
+    <ClCompile Include="window.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="global.h" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="file.h" />
     <ClInclude Include="util.h" />
+    <ClInclude Include="window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
