Update - #003 - Window and pages

--- a/PasswortManager3.0.vcxproj.filters
+++ b/PasswortManager3.0.vcxproj.filters
@@ -15,6 +15,9 @@
     <ClCompile Include="file.c">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="window.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="global.h">
@@ -28,5 +31,12 @@
     <ClInclude Include="file.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="window.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
 </Project>
