--- a/PasswortManager3.0.vcxproj
+++ b/PasswortManager3.0.vcxproj
@@ -142,13 +142,19 @@
     <ClCompile Include="file.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="util.c" />
+    <ClCompile Include="window.c" />
   </ItemGroup>
   <ItemGroup>
     <None Include="global.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="file.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="util.h" />
+    <ClInclude Include="window.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
