--- a/PasswortManager3.0.vcxproj.filters
+++ b/PasswortManager3.0.vcxproj.filters
@@ -39,4 +39,7 @@
   <ItemGroup>
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="app.manifest" />
+  </ItemGroup>
 </Project>
