--- a/PasswortManager3.0.vcxproj
+++ b/PasswortManager3.0.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="ctrl_command.c" />
     <ClCompile Include="file.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="program.c" />
     <ClCompile Include="reset_ctrl_theme.c" />
     <ClCompile Include="util.c" />
     <ClCompile Include="window.c" />
@@ -153,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="ctrl_command.h" />
     <ClInclude Include="file.h" />
+    <ClInclude Include="program.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="window.h" />
