Update-#013 - Password encryption/decryption

--- a/PasswortManager3.0.vcxproj.filters
+++ b/PasswortManager3.0.vcxproj.filters
@@ -30,6 +30,7 @@
     <None Include="global.h">
       <Filter>src</Filter>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="util.h">
